--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,6 +117,160 @@
     max-width: 220px;
   }
 }
+.contact__button-form {
+  display: inline-block;
+  background-color: gray;
+  color: black;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+  font-weight: 400;
+  transition: 0.4s;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+.contact__button-form:hover {
+  background-color: white;
+}
+
+.contact {
+  padding: 4.5rem 0 1rem;
+  text-align: center;
+}
+
+.contact__container {
+  row-gap: 3rem;
+  padding-bottom: 3rem;
+  display: grid;
+  gap: 1.25rem;
+}
+
+.contact__title {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.contact__info {
+  display: grid;
+  gap: 1rem;
+}
+
+.contact__card {
+  background-color: rgb(196, 190, 190);
+  padding: 1rem;
+  border-radius: 0.75rem;
+  text-align: center;
+}
+.contact__card a {
+  text-decoration: none;
+}
+
+.contact__card-icon {
+  font-size: 2rem;
+  color: white;
+  margin-bottom: 0.25rem;
+}
+
+.contact__button:hover .contact__button-icon {
+  transform: translateX(0.25rem);
+}
+
+.contact__card-title,
+.contact__card-data {
+  font-size: 1rem;
+}
+
+.contact__card-title {
+  font-weight: 600;
+}
+
+.contact__card-data {
+  display: block;
+  margin-bottom: 0.75rem;
+}
+
+.contact__button {
+  color: mediumorchid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+
+.contact__button-icon {
+  font-size: 1rem;
+  transition: 0.4s;
+}
+
+.contact__form-div {
+  position: relative;
+  margin-bottom: 2rem;
+  height: 4rem;
+}
+
+.contact__form-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid black;
+  background: none;
+  outline: none;
+  padding: 1.5rem;
+  border-radius: 0.75rem;
+  z-index: 1;
+}
+
+.contact__form-tag {
+  position: absolute;
+  top: -0.75rem;
+  left: 1.25rem;
+  font-size: 0.8rem;
+  padding: 0.25rem;
+  background-color: white;
+  z-index: 10;
+}
+
+.contact__form-area {
+  height: 11rem;
+}
+
+.contact__form-area textarea {
+  resize: none;
+}
+
+/*=============== BREAKPOINTS ===============*/
+/* For medium devices */
+@media screen and (min-width: 576px) {
+  .contact__info {
+    grid-template-columns: 300px;
+    justify-content: center;
+  }
+  .contact__form {
+    width: 360px;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 767px) {
+  .contact__container {
+    grid-template-columns: repeat(2, -webkit-max-content);
+    grid-template-columns: repeat(2, max-content);
+    justify-content: center;
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+  }
+}
+/* For large devices */
+@media screen and (min-width: 992px) {
+  .contact__container {
+    -moz-column-gap: 6rem;
+         column-gap: 6rem;
+  }
+}
 * {
   margin: 0%;
   padding: 0%;
@@ -448,5 +602,13 @@
   }
   .services .services_info {
     width: 100%;
+  }
+  .contact__info {
+    grid-template-columns: 300px;
+    justify-content: center;
+  }
+  .contact__form {
+    width: 360px;
+    margin: 0 auto;
   }
 }/*# sourceMappingURL=styles.css.map */
