--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,5 @@
 @import "adminsite";
+@import "contact";
 
 * {
   margin: 0%;
@@ -326,6 +327,7 @@
 .property_details_description {
   grid-area: 2 / 1 / 5 / 6;
 }
+
 }
 
 @media (max-width: 576px){
@@ -376,6 +378,16 @@
   .services_info{
     width: 100%;
   }
+}
+
+.contact__info {
+  grid-template-columns: 300px;
+  justify-content: center;
+  }
+
+.contact__form {
+width: 360px;
+margin: 0 auto;
 }
 
 }
