Modified search button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -574,6 +574,9 @@
   .search-mod {
     width: 80% !important;
   }
+  .btn-search {
+    width: 50% !important;
+  }
   .header_main {
     background-position: center;
   }
